# RME

./: .clang-format  .gitignore  AGENTS.md  BUILDING.md  CMakeLists.txt  CMakeUserPresets.json  OPENGL_REPORT.md  README.md  benchmark_tileset  benchmark_tileset.cpp  build_linux.sh  build_output.txt  build_output_2.txt  build_output_3.txt  build_output_clean.txt  build_output_final.txt  build_windows.bat  compile_log.txt  conanfile.py  errors.txt  fix_build_errors.py  refactor_wxstr.py  setup_conan.sh  test_iterator_mock  test_selection_mock  test_variant_logic  vcpkg.json
source/: CMakeLists.txt  about_window.cpp  about_window.h  action.cpp  action.h  add_item_window.cpp  add_item_window.h  add_tileset_window.cpp  add_tileset_window.h  animation_timer.cpp  application.cpp  application.h  artprovider.cpp  artprovider.h  basemap.cpp  basemap.h  browse_tile_window.cpp  browse_tile_window.h  brush.cpp  brush.h  brush_enums.h  brush_tables.cpp  brush_utility.cpp  brush_utility.h  carpet_brush.cpp  carpet_brush.h  client_version.cpp  client_version.h  common.cpp  common.h  common_windows.cpp  common_windows.h  complexitem.cpp  complexitem.h  con_vector.h  container_properties_window.cpp  container_properties_window.h  copybuffer.cpp  copybuffer.h  creature.cpp  (+169 more)
source/app/: application.cpp  application.h  client_version.cpp  client_version.h  definitions.h  extension.cpp  extension.h  main.h  preferences.cpp  preferences.h  rme_forward_declarations.h  settings.cpp  settings.h  threads.h  updater.cpp  updater.h
source/brushes/: brush.cpp  brush.h  brush_enums.h  brush_tables.cpp  brush_utility.cpp  brush_utility.h  carpet_brush.cpp  carpet_brush.h  creature_brush.cpp  creature_brush.h  doodad_brush.cpp  doodad_brush.h  ground_brush.cpp  ground_brush.h  house_brush.cpp  house_brush.h  house_exit_brush.cpp  house_exit_brush.h  raw_brush.cpp  raw_brush.h  spawn_brush.cpp  spawn_brush.h  table_brush.cpp  table_brush.h  wall_brush.cpp  wall_brush.h  waypoint_brush.cpp  waypoint_brush.h
source/editor/: action.cpp  action.h  action_queue.cpp  action_queue.h  copybuffer.cpp  copybuffer.h  dirty_list.cpp  dirty_list.h  editor.cpp  editor.h  editor_factory.cpp  editor_factory.h  editor_tabs.cpp  editor_tabs.h  hotkey_manager.cpp  hotkey_manager.h  map_session.h  selection.cpp  selection.h  selection_thread.cpp  selection_thread.h
source/ext/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
source/game/: animation_timer.cpp  animation_timer.h  complexitem.cpp  complexitem.h  creature.cpp  creature.h  creatures.cpp  creatures.h  house.cpp  house.h  item.cpp  item.h  item_attributes.cpp  item_attributes.h  items.cpp  items.h  materials.cpp  materials.h  outfit.h  preview_preferences.cpp  preview_preferences.h  spawn.cpp  spawn.h  town.cpp  town.h  waypoints.cpp  waypoints.h
source/ingame_preview/: floor_visibility_calculator.cpp  floor_visibility_calculator.h  ingame_preview_canvas.cpp  ingame_preview_canvas.h  ingame_preview_manager.cpp  ingame_preview_manager.h  ingame_preview_renderer.cpp  ingame_preview_renderer.h  ingame_preview_window.cpp  ingame_preview_window.h
source/io/: filehandle.cpp  filehandle.h  iomap.cpp  iomap.h  iomap_otbm.cpp  iomap_otbm.h  iomap_otmm.cpp  iomap_otmm.h  templates.h
source/json/: json_spirit.h  json_spirit_error_position.h  json_spirit_reader.cpp  json_spirit_reader.h  json_spirit_reader_template.h  json_spirit_stream_reader.h  json_spirit_utils.h  json_spirit_value.h  json_spirit_writer.cpp  json_spirit_writer.h  json_spirit_writer_template.h
source/live/: live_action.cpp  live_action.h  live_client.cpp  live_client.h  live_manager.cpp  live_manager.h  live_packets.h  live_peer.cpp  live_peer.h  live_server.cpp  live_server.h  live_socket.cpp  live_socket.h  live_tab.cpp  live_tab.h
source/lua/: lua_api.cpp  lua_api.h  lua_api_algo.cpp  lua_api_algo.h  lua_api_app.cpp  lua_api_app.h  lua_api_brush.cpp  lua_api_brush.h  lua_api_color.cpp  lua_api_color.h  lua_api_creature.cpp  lua_api_creature.h  lua_api_geo.cpp  lua_api_geo.h  lua_api_http.cpp  lua_api_http.h  lua_api_image.cpp  lua_api_image.h  lua_api_item.cpp  lua_api_item.h  lua_api_json.cpp  lua_api_json.h  lua_api_map.cpp  lua_api_map.h  lua_api_noise.cpp  lua_api_noise.h  lua_api_position.cpp  lua_api_position.h  lua_api_selection.cpp  lua_api_selection.h  lua_api_tile.cpp  lua_api_tile.h  lua_dialog.cpp  lua_dialog.h  lua_engine.cpp  lua_engine.h  lua_script.cpp  lua_script.h  lua_script_manager.cpp  lua_script_manager.h  (+2 more)
source/map/: basemap.cpp  basemap.h  map.cpp  map.h  map_allocator.h  map_region.cpp  map_region.h  map_search.cpp  map_search.h  map_statistics.cpp  map_statistics.h  otml.cpp  otml.h  position.h  spatial_hash_grid.h  tile.cpp  tile.h  tile_operations.cpp  tile_operations.h  tileset.cpp  tileset.h
source/net/: net_connection.cpp  net_connection.h  process_com.cpp  rme_net.cpp  rme_net.h
source/palette/: palette_brushlist.cpp  palette_brushlist.h  palette_common.cpp  palette_common.h  palette_creature.cpp  palette_creature.h  palette_house.cpp  palette_house.h  palette_waypoints.cpp  palette_waypoints.h  palette_window.cpp  palette_window.h
source/rendering/: brush_cursor_drawer.cpp  brush_overlay_drawer.cpp  brush_overlay_drawer.h  coordinate_mapper.cpp  creature_drawer.cpp  drag_shadow_drawer.cpp  drag_shadow_drawer.h  drawing_options.cpp  drawing_options.h  editor_sprite_loader.cpp  floor_drawer.cpp  floor_drawer.h  fps_counter.cpp  fps_counter.h  graphics.cpp  graphics.h  grid_drawer.cpp  grid_drawer.h  item_drawer.cpp  light_drawer.cpp  light_drawer.h  live_cursor_drawer.cpp  map_display.cpp  map_display.h  map_drawer.cpp  map_drawer.h  marker_drawer.cpp  marker_drawer.h  minimap_window.cpp  preview_drawer.cpp  preview_drawer.h  render_view.cpp  render_view.h  screen_capture.cpp  screenshot_saver.cpp  screenshot_saver.h  selection_drawer.cpp  shade_drawer.cpp  shade_drawer.h  sprite_drawer.cpp  (+7 more)
source/ui/: about_window.cpp  about_window.h  add_item_window.cpp  add_item_window.h  add_tileset_window.cpp  add_tileset_window.h  artprovider.cpp  artprovider.h  dcbutton.cpp  (+60 more)
(+544 files in other folders)
